@@ -1,7 +1,10 @@
 package gift.product.service;
 
+import gift.common.page.PageResponse;
 import gift.product.domain.Product;
+import gift.product.domain.ProductOption;
 import gift.product.dto.ProductEditRequestDto;
+import gift.product.dto.ProductOptionResponseDto;
 import gift.product.dto.ProductRequestDto;
 import gift.product.dto.ProductResponseDto;
 import gift.product.exception.ProductNotFoundException;
@@ -27,6 +30,24 @@ public class ProductService {
                 .build();
     }
 
+    @Transactional(readOnly = true)
+    public Product getProductWithOptions(Long id) {
+        Product product = getProduct(id);
+
+        List<ProductOptionResponseDto> optionsDto = restClient.get()
+                .uri("/api/products/{productId}/options", id)
+                .retrieve()
+                .body(new ParameterizedTypeReference<>() {});
+
+        if (optionsDto != null) {
+            optionsDto.stream()
+                    .map(dto -> new ProductOption(dto.id(), dto.name(), dto.quantity()))
+                    .forEach(product::addProductOption);
+        }
+
+        return product;
+    }
+
     @Transactional
     public void saveProduct(ProductRequestDto requestDto) {
         restClient.post().uri("/api/admin/products").body(requestDto).retrieve().toBodilessEntity();
@@ -34,24 +55,27 @@ public class ProductService {
 
     @Transactional(readOnly = true)
     public Page<Product> getProducts(Pageable pageable) {
-        // 이제 product-service는 List<DTO>를 반환합니다.
-        List<ProductResponseDto> responseList = restClient.get()
-                .uri(uriBuilder -> uriBuilder.path("/api/admin/products")
-                        .queryParam("page", pageable.getPageNumber())
-                        .queryParam("size", pageable.getPageSize())
-                        .build())
+        var pageResp = restClient.get()
+                .uri(uriBuilder -> {
+                    uriBuilder.path("/api/admin/products")
+                            .queryParam("page", pageable.getPageNumber())
+                            .queryParam("size", pageable.getPageSize());
+                    pageable.getSort().forEach(o ->
+                            uriBuilder.queryParam("sort", o.getProperty() + "," + o.getDirection())
+                    );
+                    return uriBuilder.build();
+                })
                 .retrieve()
-                .body(new ParameterizedTypeReference<List<ProductResponseDto>>() {});
+                .body(new ParameterizedTypeReference<
+                        PageResponse<ProductResponseDto>>() {});
 
-        if (responseList == null) {
-            return Page.empty();
-        }
+        if (pageResp == null) return Page.empty(pageable);
 
-        List<Product> productList = responseList.stream()
+        var content = pageResp.content().stream()
                 .map(dto -> new Product(dto.id(), dto.name(), dto.price(), dto.imageUrl()))
-                .collect(Collectors.toList());
+                .toList();
 
-        return new PageImpl<>(productList, pageable, productList.size());
+        return new PageImpl<>(content, pageable, pageResp.totalElements());
     }
 
     @Transactional(readOnly = true)
